[package]
name = "rusty_crud"
version = "0.1.0"
authors = ["sum1nil <jaxsup@aol.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/bin.rs"
[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
